Fix menus with unknown IDs to be filtered out